# cohesion-tools

./: .pre-commit-config.yaml  CITATION.cff  README.md  pylock.toml  pyproject.toml
.github/workflows/: build.yml  lint.yml  publish.yml  pylock.yml  release.yml  test.yml
src/cohesion_tools/: evaluation.py
src/cohesion_tools/evaluators/: bridging.py  cohesion.py  coreference.py  pas.py
src/cohesion_tools/extractors/: base.py  bridging.py  coreference.py  pas.py
tests/: conftest.py  test_evaluation.py  test_restore_pas_annotation.py
tests/data/expected/score/: 0.csv  0.json  0.txt
