[tool.poetry]
name = "cohesion-tools"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["nobu-g <ueda-n127@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rhoknp = "^1.3"

[tool.poetry.group.dev.dependencies]
ipython = [
    { version = "~8.12.1", python = "3.8" },
    { version = "^8.13", python = ">=3.9" },
]
ipdb = "^0.13.13"


[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
line_length = 120

[tool.mypy]
python_version = 3.8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
