[tool.poetry]
name = "cohesion-tools"
version = "0.5.2"
description = ""
license = "MIT"
authors = ["nobu-g <ueda-n127@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rhoknp = "~1.5.0"
pandas = [
    { version = "~2.0.3", python = "3.8", optional = true },
    { version = "^2.1", python = ">=3.9", optional = true },
]

[tool.poetry.group.dev.dependencies]
ipython = [
    { version = "~8.12.1", python = "3.8" },
    { version = "^8.13", python = ">=3.9" },
]
ipdb = "^0.13.13"
pytest = "^7.4"

[tool.poetry.extras]
eval = ["pandas"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src"]

[tool.flake8]
# E203 is not PEP8 compliant and black insert space around slice (https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated)
# E501: Line too long. Disable it to allow long lines of comments and print lines which black allows.
# W503: line break before binary operator (https://www.flake8rules.com/rules/W503.html)
ignore = ["E203", "E501", "W503"]
max-line-length = 120

[tool.mypy]
python_version = 3.8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
