[project]
name = "cohesion-tools"
version = "0.7.3"
description = "A preprocessing and evaluation tools for Japanese cohesion analysis"
license = "MIT"
authors = [
  {name = "Nobuhiro Ueda", email = "ueda-n127@hotmail.co.jp"},
]
maintainers = [
  {name = "Nobuhiro Ueda", email = "ueda-n127@hotmail.co.jp"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rhoknp>=1.5.1",
]

[project.optional-dependencies]
eval = [
    'pandas>=2.0.0,<2.1.0; python_version == "3.8"',
    'pandas>=2.0.0; python_version >= "3.9"',
]

[tool.uv]
dev-dependencies = [
    'ipython>=8.12.0,<8.13.0; python_version == "3.8"',
    'ipython>=8.13.0; python_version >= "3.9"',
    "ipdb>=0.13.13",
    "pytest>=8.0.0",
    "pip>=24.2",
]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = 3.8

[tool.ruff]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py38"  # The minimum Python version to target

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "PL", "PD", "NPY", "RUF", "UP", "TID", "COM", "PT", "ARG", "PYI", "ANN"]
ignore = [
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "E501",  # Line too long
    "RUF001",  # String contains ambiguous `ノ` (KATAKANA LETTER NO). Did you mean `/` (SOLIDUS)?
    "RUF002",  # Docstring contains ambiguous `，` (FULLWIDTH COMMA). Did you mean `,` (COMMA)?
    "COM812",  # Trailing comma missing
    "ANN002",  # Missing type annotation for `*args`
    "ANN003",  # Missing type annotation for `**kwargs`
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
